[project]
name = "old-books-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crossenv>=1.6.1",
    "isbntools>=4.3.29",
    "keras-ocr>=0.9.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyinstaller>=6.17.0",
    "pyqt6>=6.10.1",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "tensorflow>=2.20.0",
    "xlsxwriter>=3.2.9",
]
